[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyponcloud2mqtt"
version = "0.0.1"
authors = [
  { name="Florian Ligneul", email="contact@florian-ligneul.fr" },
]
description = "A bridge between Hypon Cloud and MQTT."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pyyaml",
    "paho-mqtt",
]

[project.scripts]
hyponcloud2mqtt = "hyponcloud2mqtt.main:main"
